# manatee-fitness

./: .eslintrc.json  .gitignore  .prettierignore  LICENSE  README.md  angular.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-signed-apk.yml
src/: index.html  styles.css
src-tauri/: .env  Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-28-224942_create_foods/: down.sql  up.sql
src-tauri/migrations/2024-10-30-005153_create_meals/: up.sql
src-tauri/migrations/2024-10-30-223837_create_mealfoods/: down.sql  up.sql
src-tauri/migrations/2024-12-09-230752_recipes/: up.sql
src-tauri/migrations/2024-12-30-202308_weighins/: down.sql  up.sql
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs  schema.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/components/food-list/: food-list.component.css  food-list.component.html  food-list.component.ts  (+1 more)
src/app/directives/: longpress.directive.spec.ts  longpress.directive.ts  swipe.directive.ts
src/app/models/: chart-bar.model.ts  chart-donut.model.ts  chart-line.model.ts  food.model.ts  goal.model.ts  meal.model.ts  mealfood.model.ts  recipe.model.ts  recipefood.model.ts  weigh-in.model.ts
src/app/services/: database.service.ts  date.service.ts  open-food-facts.service.spec.ts  open-food-facts.service.ts  scan.service.spec.ts  scan.service.ts  unit-conversion.service.spec.ts  unit-conversion.service.ts
(+78 files in other folders)
